ボタンの完成
ボタンを変更込みで完成しました

--- a/moriworks/src/components/index/TopHeader/TopHeader.module.scss
+++ b/moriworks/src/components/index/TopHeader/TopHeader.module.scss
@@ -57,17 +57,19 @@
     display: flex;
     position:  relative;
 }
-//Kosugi Maru
-.Btn_title {
-    font-family: '', ;
-    font-weight: bold;
-    font-size: 40px;
-    text-align: center;
-    width: fit-content;
-    line-height: 50px;
-    letter-spacing: 0.04rem;
-    color: black;
-  }
+
+
+// //Kosugi Maru
+// .Btn_title {
+//     font-family: '', ;
+//     font-weight: bold;
+//     font-size: 40px;
+//     text-align: center;
+//     width: fit-content;
+//     line-height: 50px;
+//     letter-spacing: 0.04rem;
+//     color: black;
+//   }
   
 
 
