--- a/moriworks/src/components/index/TopButton/TopButton.module.scss
+++ b/moriworks/src/components/index/TopButton/TopButton.module.scss
@@ -34,7 +34,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 10px 5px 5px gray;
+  // box-shadow: 10px 5px 5px gray;
 }
 
 .HeroBtn_img {
