--- a/moriworks/src/components/Signup.module.scss
+++ b/moriworks/src/components/Signup.module.scss
@@ -1,14 +1,11 @@
 .div1 {
   box-sizing: border-box;
-
   margin: 0 auto;
   width: 634px;
   height: 739.06px;
-
   background: #ffffff;
   border: 1.8px solid #dbdbdb;
   border-radius: 1.8px;
-
   text-align: center;
 }
 .h1 {
@@ -23,9 +20,6 @@
 }
 .input {
   box-sizing: border-box;
-  // display: flex;
-  // flex-direction: row;
-  // align-items: flex-start;
   padding: 2px 16px 2px 16px;
 
   position: relative;
@@ -45,6 +39,11 @@
   line-height: 65px;
 
   margin-top: 15px;
+}
+.input:focus {
+  border: 2px solid #3eb2ff;
+  background-color: #f6fdff;
+  outline: 0;
 }
 
 .btn {
