--- a/moriworks/src/components/index/TopButton/TopButton.module.scss
+++ b/moriworks/src/components/index/TopButton/TopButton.module.scss
@@ -28,14 +28,17 @@
   width: 100pt;
   height: 40pt;
   padding: 10px;
-  border: solid 4px #1e1e1e;
   border-radius: 16px;
   background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
+  user-select: none;
+  cursor: pointer;
+
   // box-shadow: 10px 5px 5px gray;
 }
+
 
 .HeroBtn_img {
   display: inline-block;
@@ -56,17 +59,12 @@
   position: relative;
 }
 
-// //Kosugi Maru
-// .Btn_title {
-//     font-family: '', ;
-//     font-weight: bold;
-//     font-size: 40px;
-//     text-align: center;
-//     width: fit-content;
-//     line-height: 50px;
-//     letter-spacing: 0.04rem;
-//     color: black;
-//   }
+.Btn_title:hover{
+  background-color: blue;
+
+}
+
+
 
 @keyframes easeInOutImage {
 }
