--- a/moriworks/src/components/index/Signup/Signup.module.scss
+++ b/moriworks/src/components/index/Signup/Signup.module.scss
@@ -7,6 +7,7 @@
   border: 1.8px solid #dbdbdb;
   border-radius: 1.8px;
   text-align: center;
+  margin-top: 38px;
 }
 .h1 {
   color: rgba(0, 0, 0, 1);
