--- a/moriworks/src/components/Header/Header.module.scss
+++ b/moriworks/src/components/Header/Header.module.scss
@@ -42,6 +42,7 @@
   letter-spacing: 8%;
   text-align: center;
   font-family: 'Righteous', cursive;
+  cursor: pointer;
 }
 
 .header_div2 {
@@ -57,8 +58,6 @@
   background-color: rgba(255, 255, 255, 1);
 }
 .logout {
-  margin-right: 50px;
-}
-.top {
-  margin-left: 1000px;
+  margin-right: 5%;
+  cursor: pointer;
 }
