[feat]軽微な修正
- UIを見やすくしました。
- 日本語フォントを新しく導入しました。
- cssにてfont-famiry:'Kosugi Maru'と入力することでフォントを反映させることができます。

--- a/moriworks/src/components/HeroBtnPages/HeroBtnPages.module.scss
+++ b/moriworks/src/components/HeroBtnPages/HeroBtnPages.module.scss
@@ -12,7 +12,7 @@
 }
 
 .HeroBtn_title {
-  font-family: 'Oxygen', sans-serif;
+  font-family: 'Kosugi Maru', sans-serif;
   font-weight: bold;
   font-size: 40px;
   text-align: center;
