--- a/moriworks/src/components/index/HeroBtm/HeroBtn.module.scss
+++ b/moriworks/src/components/index/HeroBtm/HeroBtn.module.scss
@@ -12,7 +12,7 @@
 }
 
 .HeroBtn_title {
-  font-family: 'Oxygen', sans-serif;
+  font-family: 'Kosugi Maru', sans-serif;
   font-weight: bold;
   font-size: 40px;
   text-align: center;
