--- a/moriworks/src/components/Title.module.scss
+++ b/moriworks/src/components/Title.module.scss
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 0px;
   position: relative;
-  width: 184px;
+  width: 50%;
   height: 32px;
   filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.5));
 }
