--- a/moriworks/src/components/index/SignIn/Signin.module.scss
+++ b/moriworks/src/components/index/SignIn/Signin.module.scss
@@ -1,8 +1,8 @@
 .div1 {
   box-sizing: border-box;
   margin: 0 auto;
-  width: 606px;
-  height: 592px;
+  width: 634px;
+  height: fit-content;
   background: #ffffff;
   border: 1.8px solid #dbdbdb;
   border-radius: 1.8px;
@@ -10,6 +10,7 @@
   margin-top: 50px;
   margin-bottom: 50px;
 }
+
 .h1 {
   color: rgba(0, 0, 0, 1);
   font-size: 85.84609985351562px;
@@ -52,4 +53,43 @@
   display: flex;
   justify-content: center;
   margin-top: 50px;
+}
+
+/* ログインの部分 */
+.login {
+  font-family: 'Kosugi Maru';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 33px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.a1 {
+  color: #0095f6;
+}
+
+// ラベルのフォントサイズ
+.label {
+  font-size: 20px;
+  font-weight: lighter;
+  color: rgba(50, 50, 50, 0.99);
+  font-family: 'Kosugi Maru', sans-serif;
+}
+
+.or{
+  font-family: "Kosugi Maru",sans-serif;
+  line-height: unset;
+}
+/* -- OR --　の部分 */
+.or {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+.line {
+  background-color: #dbdbdb;
+  width: 224px;
+  height: 2px;
 }
