--- a/moriworks/src/components/Profile/CreateProfile.module.scss
+++ b/moriworks/src/components/Profile/CreateProfile.module.scss
@@ -8,7 +8,7 @@
   background: #fe7373;
 }
 .div2 {
-  height: 1724px;
+  height: 100%;
   width: 718;
   margin-left: 173px;
   margin-right: 173px;
