--- a/moriworks/src/components/Title.module.scss
+++ b/moriworks/src/components/Title.module.scss
@@ -7,10 +7,10 @@
   position: relative;
   width: 50%;
   height: 32px;
-  filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.5));
+  filter: text-shadow(rgba(0, 0, 0, 0.5));
+
 }
 .title_h1 {
-  width: 184px;
   height: 32px;
   font-family: 'Kosugi Maru';
   font-style: normal;
@@ -18,5 +18,5 @@
   font-size: 32px;
   line-height: 32px;
   letter-spacing: 0.08em;
-  color: #000000;
+  text-shadow: 2px 3px 5px rgba(0,0,0,0.65);
 }
