--- a/moriworks/src/components/Header/Header.module.scss
+++ b/moriworks/src/components/Header/Header.module.scss
@@ -58,6 +58,11 @@
   background-color: rgba(255, 255, 255, 1);
 }
 .logout {
+  display: flex;
   margin-right: 5%;
   cursor: pointer;
+  padding-right: 16px;
+}
+.button{
+  padding-right: 16px;
 }
