--- a/moriworks/src/components/Profile/CreateProfile.module.scss
+++ b/moriworks/src/components/Profile/CreateProfile.module.scss
@@ -69,10 +69,12 @@
 
 .td_birth2 {
   /* 右側のパディング */
-  padding-right: 12rem;
+  padding-left: 6rem;
 }
 
+.td_name2,
 .td_area2,
+.td_add2,
 .td_job2 {
   /* 左側のパディング */
   padding-left: 6rem;
@@ -129,7 +131,7 @@
   /* パディング */
   padding: 0 10px;
   /* 幅 */
-  width: 25rem;
+  width: 22rem;
   /* 最小幅 */
   min-width: 200px;
   /* 高さ */
@@ -141,9 +143,9 @@
   /* ボックスサイズ */
   box-sizing: border-box;
   /* フォントサイズ */
-  font-size: 20px;
+  font-size: 1.4rem;
   /* フォントの太さ */
-  font-weight: 500;
+  font-weight: 600;
   /* 文字色 */
   color: #000;
   /* 左側のマージン */
@@ -163,7 +165,7 @@
   /* 幅 */
   width: 70%;
   /* フォントサイズ */
-  font-size: 16px;
+  font-size: 1.4rem;
   /* 境界線 */
   border: 1px solid #999;
   /* 角丸 */
@@ -190,7 +192,7 @@
   /* リサイズ禁止 */
   resize: none;
   /* フォントサイズ */
-  font-size: 16px;
+  font-size: 1.4rem;
   /* パディング */
   padding: 0.7rem;
   /* 最小幅 */
@@ -198,7 +200,7 @@
   /* 最小高さ */
   min-height: 100px;
   /* 高さ */
-  height: 10rem;
+  height: 15rem;
   /* 幅 */
   width: 50rem;
   /* 左側のマージン */
