--- a/moriworks/src/components/Profile/EditProfile.module.scss
+++ b/moriworks/src/components/Profile/EditProfile.module.scss
@@ -40,7 +40,7 @@
 
 .table1 {
   /* 上部のマージン */
-  margin-top: 65px;
+  margin: 1.5rem 0px;
   /* テーブルのセルの間隔 */
   border-collapse: separate;
   border-spacing: 0px 95px;
