--- a/moriworks/src/components/Profile/user.module.scss
+++ b/moriworks/src/components/Profile/user.module.scss
@@ -74,3 +74,11 @@
   line-height: normal;
   letter-spacing: 1.28px;
 }
+.textarea {
+  /* 改行表示 */
+  white-space: pre-wrap;
+  /* 行間 */
+  line-height: 140%;
+  /* フォントサイズ */
+  font-size: 26px;
+}
