--- a/moriworks/src/components/Profile/user.module.scss
+++ b/moriworks/src/components/Profile/user.module.scss
@@ -67,7 +67,7 @@
 }
 .text {
   color: #000;
-  font-family: Kosugi Maru;
+  font-family: 'Kosugi Maru';
   font-size: 32px;
   font-style: normal;
   font-weight: 400;
